<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#fff"
    tools:context=".home">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/display"
        android:id = "@+id/display"
        android:hint="@string/displayHint" />

    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="20dp"
        android:id="@+id/linearLayout">

    </LinearLayout>

    <Button
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:id = "@+id/cancel"
        android:text="@string/cancel"
        android:layout_marginBottom="61dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:id = "@+id/zero"
        android:text="@string/zero"
        android:layout_alignTop="@+id/cancel"
        android:layout_toRightOf="@+id/cancel"
        android:layout_toEndOf="@+id/cancel" />

    <Button
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:id = "@+id/add"
        android:text="@string/add"
        android:layout_alignTop="@+id/zero"
        android:layout_toRightOf="@+id/zero"
        android:layout_toEndOf="@+id/zero" />

    <Button
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:id = "@+id/equal"
        android:text="@string/equal"
        android:layout_alignTop="@+id/add"
        android:layout_toRightOf="@+id/add"
        android:layout_toEndOf="@+id/add" />

    <Button
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:id = "@+id/one"
        android:text="@string/one"
        android:layout_below="@+id/four"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:id = "@+id/two"
        android:text="@string/two"
        android:layout_above="@+id/zero"
        android:layout_alignLeft="@+id/zero"
        android:layout_alignStart="@+id/zero" />

    <Button
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:id = "@+id/three"
        android:text="@string/three"
        android:layout_alignTop="@+id/two"
        android:layout_toLeftOf="@+id/equal"
        android:layout_toStartOf="@+id/equal" />

    <Button
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:id = "@+id/sub"
        android:text="@string/sub"
        android:layout_above="@+id/equal"
        android:layout_alignLeft="@+id/equal"
        android:layout_alignStart="@+id/equal" />

    <Button
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:id = "@+id/four"
        android:text="@string/four"
        android:layout_below="@+id/div"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:id = "@+id/five"
        android:text="@string/five"
        android:layout_alignTop="@+id/four"
        android:layout_alignLeft="@+id/two"
        android:layout_alignStart="@+id/two" />

    <Button
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:id = "@+id/six"
        android:text="@string/six"
        android:layout_above="@+id/three"
        android:layout_toLeftOf="@+id/sub"
        android:layout_toStartOf="@+id/sub" />

    <Button
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:id = "@+id/mul"
        android:text="@string/mul"
        android:layout_alignTop="@+id/six"
        android:layout_toRightOf="@+id/six"
        android:layout_toEndOf="@+id/six" />

    <Button
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:id = "@+id/seven"
        android:text="@string/seven"
        android:layout_above="@+id/four"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:id = "@+id/eight"
        android:text="@string/eight"
        android:layout_alignTop="@+id/seven"
        android:layout_alignLeft="@+id/five"
        android:layout_alignStart="@+id/five" />

    <Button
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:id = "@+id/nine"
        android:text="@string/nine"
        android:layout_alignTop="@+id/eight"
        android:layout_toRightOf="@+id/eight"
        android:layout_toEndOf="@+id/eight" />

    <Button
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:id = "@+id/div"
        android:text="@string/div"
        android:layout_above="@+id/mul"
        android:layout_alignLeft="@+id/mul"
        android:layout_alignStart="@+id/mul" />
</RelativeLayout>
